Sidebar color and spacing fix + Background gradient added

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -172,7 +172,7 @@
 
     @media only screen and (max-width: $tablet-portrait) {
         grid-gap: .2rem;
-        margin: .2rem;
+        margin: 0rem;
         padding-bottom: 0;
         padding-bottom: 1rem;
         margin-bottom: 2rem;
