--- a/sass/_sidebar-black.scss
+++ b/sass/_sidebar-black.scss
@@ -54,6 +54,10 @@ $font-size-secondary: 1rem;
                 color: black;
             }
 
+            .combo {
+                margin-bottom: 5rem;
+            }
+
             .newsletter {
                 position: relative;
             }
