--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -52,6 +52,10 @@ $font-size-secondary: 1rem;
                 color: white;
             }
 
+            .combo {
+                margin-bottom: 5rem;
+            }
+
             .newsletter {
                 position: relative;
             }
